...
    <AuthSessionContext.Provider value={value}>
      {error ? (
        <View style={appStyles.containerAppInit} testID="auth-session-error">
          <Text style={appStyles.errorTextAppInit}>Error: {error}</Text>
        </View>
      ) : isLoading ? (
        <View style={appStyles.containerAppInit} testID="auth-session-loading">
          <ActivityIndicator size="large" color={theme.colors.primary} />
          <Text style={appStyles.loadingTextAppInit}>Initializing...</Text>
        </View>
      ) : (
        children
      )}
...
