...
                name="settings-outline"
                size={DRAWER_MENU_ICON_SIZE}
                color={color}
              />
            )}
            accessibilityLabel="More Settings"
            testID="settings-menu-more-settings"
          />

          <View
            style={[appStyles.menuDivider, styles.panelDivider]}
            testID="settings-menu-legal-divider"
          />
...
